fixes on experiencerow for mobile, text and gap

--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -69,7 +69,7 @@
     grid-column: 2;
     display:grid;
     grid-template-columns: repeat(3,1fr);
-    gap: 1em;
+    gap: .5em;
     flex-direction: row;
     justify-content: start;
     align-items: start;
